--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "sass": "sass --watch src/scss:src/css",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
